--- a/public/index.html
+++ b/public/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Notes App</title>
-    <link font-family: sans-serif;
+    <title>Keeper App</title>
+    <link font-family: "Montserrat", sans-serif;
     href="https://fonts.googleapis.com/css?family=McLaren|Montserrat&display=swap"
     rel="stylesheet" />
     <link rel="stylesheet" href="styles.css" />
@@ -14,3 +14,4 @@
     <script src="../src/index.js" type="text/jsx"></script>
   </body>
 </html>
+
